segunda simulacion en el reporte

--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -1229,9 +1229,11 @@ Se recibe la velocidad traslacional requerida del punto descentralizado $\mathbf
 	\label{fig:simulacion_flow}
 \end{figure}
 
-En cada simulación el robot describió una trayectoria distinta, y esta trayectoria defina la entrada. En la primera fue una trayectoria cuadrada a rapidez constante, la segunda es una trayectoria circular a rapidez constante, y la tercera es una trayectoria cuadrada pero con desaceleración quendo el robot se acerca a las esqinas del cuadrado. 
+En cada simulación el robot describió una trayectoria distinta, y esta trayectoria defina la entrada. En la primera fue una trayectoria cuadrada a rapidez constante, la segunda es una trayectoria circular a rapidez constante, y la tercera es una trayectoria cuadrada pero con desaceleración quendo el robot se acerca a las esqinas del cuadrado. En todos los casos, el robot comienza en el origen con $\theta=0$. Además se utilizan los parámetros en el apéndice. %PONER LA CITA
 
-Para poder generar la primera trayectoria se utilizan escalones en la entrada. La trayectoria viene dada por (\ref{eq:entrada_cuadrado}). De esta manera se logra describir una trayectoria cuadrada con rapidez constante (durante 20s). En la figura \ref{fig:entrada_trayectoria_cuadrada} se mestra la entrada contra el tiempo. Luego de pocesar la entrada como se indica en la figura \ref{fig:simulacion_flow}, se obtienen los resultados en las figuras \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado}, \ref{fig:velocidades_ruedas_trayectoria_cuadrada} y \ref{fig:evaluacion_de_la_restriccion_cuadrado}. 
+\subsubsection{Primera simulación: trayectoria cuadrada}
+
+Para poder generar la primera trayectoria se utilizan escalones en la entrada. La velocidad de la trayectoria viene dada por (\ref{eq:entrada_cuadrado}). De esta manera se logra describir una trayectoria cuadrada con rapidez constante (durante 20s). En la figura \ref{fig:entrada_trayectoria_cuadrada} se mestra la entrada contra el tiempo. Luego de pocesar la entrada como se indica en la figura \ref{fig:simulacion_flow}, se obtienen los resultados en las figuras \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado}, \ref{fig:velocidades_ruedas_trayectoria_cuadrada} y \ref{fig:evaluacion_de_la_restriccion_cuadrado}. 
 
 \begin{equation}
 \mathbf{\dot{p_d}}(t)=\left[\begin{array}{c}\mu(t-5)-\mu(t-10)-\mu(t-1)\\ \mu(t)-\mu(t-5)-\mu(t-10)+\mu(t-15) \end{array}\right]
@@ -1240,7 +1242,7 @@ Para poder generar la primera trayectoria se utilizan escalones en la entrada. L
 
 La salida del modelo inverso del punto descentralizado se muestra en la figura \ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado}. Note que cuando el robot llega a las esquinas de la trayectoria, se tienen discontinuidades en las velocidades de las ruedas. Esto es en 0s, 5s, 10s, 15s. En cada uno de ellos el robot debe realizar un giro de $90^\circ$ a rapidez constante, y es lo que provocan las disconrinuidades. En la figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado} se muestra la señal suavizada. en esta se evitan las discotinuidades de la salida del modelo inverso. Note que as discontinuidades indican aceleraciones infinitas, por lo que es imposible para un robot realizar una trayectoria cuadrada perfecta a rapidez constante. Este resultado es el esperado para el sistema que se está simulando. 
 
-Note tambien que la salida de las ruedas es la esperada, dada la trayectoria que se debe seguir. por ejemplo, cada vez que el robot gita a la derecha (5s, 10s, 15s) se espera un aumento en la velocidad de la rueda izquierda y una disminución de la rueda derecha. Además, cuando no se realizan giros, sino que se sigue una trayectoria recta, se espera ue las velocidades tiendan a un mismo valor. Estos resultados soniciden son los que se muestran en la figura \ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado}.
+Note tambien que la salida de las ruedas es la esperada, dada la trayectoria que se debe seguir. por ejemplo, cada vez que el robot gira a la derecha (5s, 10s, 15s) se espera un aumento en la velocidad de la rueda izquierda y una disminución de la rueda derecha. Además, cuando no se realizan giros, sino que se sigue una trayectoria recta, se espera ue las velocidades tiendan a un mismo valor. Estos resultados soniciden son los que se muestran en la figura \ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado}.
 
 La función de las velocidades angulares de las ruedas suavizadas (figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado}), se utiliza como la entrada para el modelo directo del punto descentralizado. Note que estas velocidades ya no son las que producen la trayectoria cuadrada perfecta, sino que se espera una trayectoria similar, pero deformada (se le llama $\phi$). En la figura   \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado} se muestra el resultado de la posición del punto descentralizado a través del tiempo, provocado por las velocidades de la figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado}. Cuando $\phi$ describe porciones rectas, coincide con el cuadrado, sin embargo en las esquinas, se presentan cambios. Se debe notar que $\phi$ tiene sus esquinas redondeadas. Esto se debe al suavizamiento que se le realiza a la entrada del sistema. Este resultado es el esperado. Ya que las diferencias más grandes entre las velocidades de las fuedas, y las velocidades suavizadas (ver figura \ref{fig:velocidades_ruedas_trayectoria_cuadrada}) se dan cuando el robot se encuentra en als esquinas. Entonces las trayectorias descritas por el robot, deben tener mayores diferencias en las esquinas.
 
@@ -1269,6 +1271,7 @@ Finalmente se analiza el resultado del centro del robot. Las velocidades suaviza
         \caption{Entradas de las simulaciones}
         \label{fig:entradas_simulaciones_cinematico}
  \end{figure}
+
 
 %******Posicion trayectoria cuadrada***********************************************************************
 \begin{figure}
@@ -1301,6 +1304,19 @@ Finalmente se analiza el resultado del centro del robot. Las velocidades suaviza
 	\label{fig:evaluacion_de_la_restriccion_cuadrado}
 \end{figure}
 
+
+\subsubsection{Segunda simulación: trayectoria circular}
+
+Para poder generar la segunda trayectoria se utilizan funciones trigonométricas en la entrada. La velocidad de la trayectoria viene dada por (\ref{eq:entrada_circular}). De esta manera se logra describir una trayectoria circular con rapidez constante (durante 20s). En la figura \ref{fig:entrada_trayectoria_circular} se mestra la entrada contra el tiempo. Luego de pocesar la entrada como se indica en la figura \ref{fig:simulacion_flow}, se obtienen los resultados en las figuras \ref{fig:posicion_del_robot_modelo_cinematico_circulo}, \ref{fig:velocidades_ruedas_trayectoria_circulo} y \ref{fig:evaluacion_de_la_restriccion_circulo}.
+
+\begin{equation}
+\mathbf{\dot{p_d}}(t)=\left[\begin{array}{c} \sen(t)\\ \cos(t) \end{array}\right]
+\label{eq:entrada_circular}
+\end{equation}
+
+En esta simulación, a diferencia de la primera, la trayectoria se completa más de una vez. Esto se debe a que la trayectoria del centro del robot no llega a coincidir con la trayectoria del punto descentralizado (ver figura \ref{fig:posicion_del_robot_modelo_cinematico_circulo}), entonces se hace al robot girar más veces sobre la trayectoria, para averiguar si esta condición cambia cuando t aumenta. Se completan poco más de tres revoluciones, y no se observan cambios en la condición descrita. SE pueden apreciar puntos de corte entre las trayectorias, pero no se tiene un comportamiento asintótico, que sí se tiene en los trayectos rectos. Se puede apreciar que en general, la trayectoria del centro del robot se encuentra adentro de la trayectoria del punto descentralizado (los que se obtienen de los modelos directos). En la figura \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado}, se nota que cuando el robot gira, la trayectoria del centro, se encuentra hacia adentro. Si se considera al círculo como un giro contínuo, entonces ambos resultados son consistentes. %Sinembargo, note que como el círculo es lo suficientemente grande, entonces ambas trayectorias están cercanas, ya que entre mayor sea el radio del círculo, mayor será su semajanza con una trayectoria recta, y por tanto las trayectorias del dentro y eñl punto descentralizado se vana a asemejar más.  
+
+  También se debe analizar lo que se muestra en la figura \ref{fig:velocidades_ruedas_trayectoria_circulo}. Estas son las velocidades angulares de las reedas que generan las trayectorias en la figura \ref{fig:posicion_del_robot_modelo_cinematico_circulo}. Estas presentan el comportamiento esperado. Al inicio se tiene un comportamiento con aceleraciones elevadas, esto se debe a que el robot se encuentra perpendicular a la trayectoria. Sin embargo, conforme avanza el tiempo, las velocidades se estabilizan en un valor, que es lo que permite que se describa el círculo. De las gáfiacas, se miden los valores donde se estabilizan las velocidades angulares de las ruedas, y se obtiene $22.7rad/s$ para la rueda izquierda, y $16.77rad/s$ para la rueda derecha. Note que como el robot se encuentra avanzando hacia su frente, entonces se esperan valores positivos, y como el robot gira hacia su derecha, se espera qeu la velocidad de la rueda izquierda sea mayor. Ahora, respecto al valor numérico de estos vfalores finales, se debe conciderar que estos se tienen cuando ya el robot se encuentra describiendo un círculo. De la figura  \ref{fig:posicion_del_robot_modelo_cinematico_circulo} se puede concluir que el radio $R$ de la trayectoria circular que describe el centro del robot es aproximadamente $2m$ (midiendo los extremos de la posición en y). De la ecuación (\ref{eq:entrada_circular}), se sabe que la magnitud de la velocidad tangencial al círculo del robot viene dada por $v_0=\sqrt{\cos^2(t)+\sen^2(t)}=1$. Entnces, se se concidera a $\rho$ como la velocidad angular alrededor del círculo, entonces se tiene que $\rho=v_0/R=0.5 rad/s$. Como el robot diferencial tiene la restricción que solo se puede mover hacia el frente (o hacia atrás pero no hacia los lados). Se puede suponer que el robot se encentra perpendicular al radio de la trayectoria circular. Se sabe que el ancho del robot es $0.6m$, enotnces la trayectoria que describe la rueda derecha tiene un radio de $R_r=R-0.3=0.7m$, y la rueda izquierda de $R_l=R+0.3=0.3$. Conociendo la velocidad angular y el radio de cada rueda, se determina la velocidad traslacional. $v_r=\rho R_r=0.35m/s$, y $v_l=\rho R_l=0.65m/s$. 
 
 
 
