discucionde analisis modelo cinematico

--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -1236,7 +1236,7 @@ En cada simulación el robot describió una trayectoria distinta, y esta trayector
 Para poder generar la primera trayectoria se utilizan escalones en la entrada. La velocidad de la trayectoria viene dada por (\ref{eq:entrada_cuadrado}). De esta manera se logra describir una trayectoria cuadrada con rapidez constante (durante 20s). En la figura \ref{fig:entrada_trayectoria_cuadrada} se mestra la entrada contra el tiempo. Luego de pocesar la entrada como se indica en la figura \ref{fig:simulacion_flow}, se obtienen los resultados en las figuras \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado}, \ref{fig:velocidades_ruedas_trayectoria_cuadrada} y \ref{fig:evaluacion_de_la_restriccion_cuadrado}. 
 
 \begin{equation}
-\mathbf{\dot{p_d}}(t)=\left[\begin{array}{c}\mu(t-5)-\mu(t-10)-\mu(t-1)\\ \mu(t)-\mu(t-5)-\mu(t-10)+\mu(t-15) \end{array}\right]
+\mathbf{\dot{p_d}}(t)=\left[\begin{array}{c}\mu(t-5)-\mu(t-10)-\mu(t-15)\\ \mu(t)-\mu(t-5)-\mu(t-10)+\mu(t-15) \end{array}\right]
 \label{eq:entrada_cuadrado}
 \end{equation}
 
@@ -1246,7 +1246,7 @@ Note tambien que la salida de las ruedas es la esperada, dada la trayectoria que
 
 La función de las velocidades angulares de las ruedas suavizadas (figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado}), se utiliza como la entrada para el modelo directo del punto descentralizado. Note que estas velocidades ya no son las que producen la trayectoria cuadrada perfecta, sino que se espera una trayectoria similar, pero deformada (se le llama $\phi$). En la figura   \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado} se muestra el resultado de la posición del punto descentralizado a través del tiempo, provocado por las velocidades de la figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado}. Cuando $\phi$ describe porciones rectas, coincide con el cuadrado, sin embargo en las esquinas, se presentan cambios. Se debe notar que $\phi$ tiene sus esquinas redondeadas. Esto se debe al suavizamiento que se le realiza a la entrada del sistema. Este resultado es el esperado. Ya que las diferencias más grandes entre las velocidades de las fuedas, y las velocidades suavizadas (ver figura \ref{fig:velocidades_ruedas_trayectoria_cuadrada}) se dan cuando el robot se encuentra en als esquinas. Entonces las trayectorias descritas por el robot, deben tener mayores diferencias en las esquinas.
 
-Finalmente se analiza el resultado del centro del robot. Las velocidades suavizadas de las ruedas son la entrada al modelo directo del punto central del robot. Es de esperarse que la trayectoria que describe el punto central del robot no sea la misma que la que describe el punto descentralizado, ya que con el método del punto descentralizado no se puede controlar la orientación. Sin embargo se evidente que cuando el robot describe trayectorias rectas, la posición del centro del robot se apoxima a la trayectoria del punto descentralizado. Además la orientación del robot cada vez se asemeja más a la que describe la trayectoria del punto descentralizado. Con este resultado se comprueba la validez del modelo del punto descentralizado, ya que sí logra describir una buena aproximación de la posición del robot. Cuando el robot realiza un giro se evidencia una direfencia entre el centro del robot y la trayectoria cuadrada, pero este se corrige cuando el robot se mueve en la  porción recta.
+Finalmente se analiza el resultado del centro del robot. Las velocidades suavizadas de las ruedas son la entrada al modelo directo del punto central del robot. Es de esperarse que la trayectoria que describe el punto central del robot no sea la misma que la que describe el punto descentralizado, ya que con el método del punto descentralizado no se puede controlar la orientación. Sin embargo se evidente que cuando el robot describe trayectorias rectas, la posición del centro del robot se apoxima a la trayectoria del punto descentralizado. Además la orientación del robot cada vez se asemeja más a la que describe la trayectoria del punto descentralizado. Con este resultado se comprueba la validez del modelo del punto descentralizado, ya que sí logra describir una buena aproximación de la posición del robot. Cuando el robot realiza un giro se evidencia una direfencia entre el centro del robot y la trayectoria cuadrada, pero este se corrige cuando el robot se mueve en la  porción recta. TOmando en cuanta el análisis cuantitativo, se mide de las gráficas en \ref{fig:velocidades_ruedas_trayectoria_cuadrada} que la velocidad de las ruedas es de $10 rad/s$ en los trayectos rectos. Como  el radio de las ruedas cumple que $r=0.1$, y no se consideran deslizamientos de las ruedas. Entocnes se obtiene una velocidad traslacional de $1m/s$, que es exactamente la que se introduce como entrada.  
 
 
 %**********Entradas de las simulaciones*******************************************************************
@@ -1310,13 +1310,17 @@ Finalmente se analiza el resultado del centro del robot. Las velocidades suaviza
 Para poder generar la segunda trayectoria se utilizan funciones trigonométricas en la entrada. La velocidad de la trayectoria viene dada por (\ref{eq:entrada_circular}). De esta manera se logra describir una trayectoria circular con rapidez constante (durante 20s). En la figura \ref{fig:entrada_trayectoria_circular} se mestra la entrada contra el tiempo. Luego de pocesar la entrada como se indica en la figura \ref{fig:simulacion_flow}, se obtienen los resultados en las figuras \ref{fig:posicion_del_robot_modelo_cinematico_circulo}, \ref{fig:velocidades_ruedas_trayectoria_circulo} y \ref{fig:evaluacion_de_la_restriccion_circulo}.
 
 \begin{equation}
-\mathbf{\dot{p_d}}(t)=\left[\begin{array}{c} \sen(t)\\ \cos(t) \end{array}\right]
+\mathbf{\dot{p_d}}(t)=\left[\begin{array}{c} 2\sen(t)\\ 2\cos(t) \end{array}\right]
 \label{eq:entrada_circular}
 \end{equation}
 
 En esta simulación, a diferencia de la primera, la trayectoria se completa más de una vez. Esto se debe a que la trayectoria del centro del robot no llega a coincidir con la trayectoria del punto descentralizado (ver figura \ref{fig:posicion_del_robot_modelo_cinematico_circulo}), entonces se hace al robot girar más veces sobre la trayectoria, para averiguar si esta condición cambia cuando t aumenta. Se completan poco más de tres revoluciones, y no se observan cambios en la condición descrita. SE pueden apreciar puntos de corte entre las trayectorias, pero no se tiene un comportamiento asintótico, que sí se tiene en los trayectos rectos. Se puede apreciar que en general, la trayectoria del centro del robot se encuentra adentro de la trayectoria del punto descentralizado (los que se obtienen de los modelos directos). En la figura \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado}, se nota que cuando el robot gira, la trayectoria del centro, se encuentra hacia adentro. Si se considera al círculo como un giro contínuo, entonces ambos resultados son consistentes. %Sinembargo, note que como el círculo es lo suficientemente grande, entonces ambas trayectorias están cercanas, ya que entre mayor sea el radio del círculo, mayor será su semajanza con una trayectoria recta, y por tanto las trayectorias del dentro y eñl punto descentralizado se vana a asemejar más.  
 
-  También se debe analizar lo que se muestra en la figura \ref{fig:velocidades_ruedas_trayectoria_circulo}. Estas son las velocidades angulares de las reedas que generan las trayectorias en la figura \ref{fig:posicion_del_robot_modelo_cinematico_circulo}. Estas presentan el comportamiento esperado. Al inicio se tiene un comportamiento con aceleraciones elevadas, esto se debe a que el robot se encuentra perpendicular a la trayectoria. Sin embargo, conforme avanza el tiempo, las velocidades se estabilizan en un valor, que es lo que permite que se describa el círculo. De las gáfiacas, se miden los valores donde se estabilizan las velocidades angulares de las ruedas, y se obtiene $22.7rad/s$ para la rueda izquierda, y $16.77rad/s$ para la rueda derecha. Note que como el robot se encuentra avanzando hacia su frente, entonces se esperan valores positivos, y como el robot gira hacia su derecha, se espera qeu la velocidad de la rueda izquierda sea mayor. Ahora, respecto al valor numérico de estos vfalores finales, se debe conciderar que estos se tienen cuando ya el robot se encuentra describiendo un círculo. De la figura  \ref{fig:posicion_del_robot_modelo_cinematico_circulo} se puede concluir que el radio $R$ de la trayectoria circular que describe el centro del robot es aproximadamente $2m$ (midiendo los extremos de la posición en y). De la ecuación (\ref{eq:entrada_circular}), se sabe que la magnitud de la velocidad tangencial al círculo del robot viene dada por $v_0=\sqrt{\cos^2(t)+\sen^2(t)}=1$. Entnces, se se concidera a $\rho$ como la velocidad angular alrededor del círculo, entonces se tiene que $\rho=v_0/R=0.5 rad/s$. Como el robot diferencial tiene la restricción que solo se puede mover hacia el frente (o hacia atrás pero no hacia los lados). Se puede suponer que el robot se encentra perpendicular al radio de la trayectoria circular. Se sabe que el ancho del robot es $0.6m$, enotnces la trayectoria que describe la rueda derecha tiene un radio de $R_r=R-0.3=0.7m$, y la rueda izquierda de $R_l=R+0.3=0.3$. Conociendo la velocidad angular y el radio de cada rueda, se determina la velocidad traslacional. $v_r=\rho R_r=0.35m/s$, y $v_l=\rho R_l=0.65m/s$. 
+  También se debe analizar lo que se muestra en la figura \ref{fig:velocidades_ruedas_trayectoria_circulo}. Estas son las velocidades angulares de las reedas que generan las trayectorias en la figura \ref{fig:posicion_del_robot_modelo_cinematico_circulo}. Estas presentan el comportamiento esperado. Al inicio se tiene un comportamiento con aceleraciones elevadas, esto se debe a que el robot se encuentra perpendicular a la trayectoria. Sin embargo, conforme avanza el tiempo, las velocidades se estabilizan en un valor, que es lo que permite que se describa el círculo. De las gáfiacas, se miden los valores donde se estabilizan las velocidades angulares de las ruedas, y se obtiene $27.7rad/s$ para la rueda izquierda, y $12.27rad/s$ para la rueda derecha. Note que como el robot se encuentra avanzando hacia su frente, entonces se esperan valores positivos, y como el robot gira hacia su derecha, se espera qeu la velocidad de la rueda izquierda sea mayor. 
+
+Ahora, respecto al valor numérico de estos vfalores finales, se debe conciderar que estos se tienen cuando ya el robot se encuentra describiendo un círculo. De la figura  \ref{fig:posicion_del_robot_modelo_cinematico_circulo} se puede concluir que el radio $R$ de la trayectoria circular que describe el centro del robot es aproximadamente $1.977m$ (midiendo los extremos de la posición en y). De la ecuación (\ref{eq:entrada_circular}), se sabe que la magnitud de la velocidad tangencial al círculo del robot viene dada por $v_0=\sqrt{4\cos^2(t)+4\sen^2(t)}=2$. Se concidera a $\rho$ como la velocidad angular alrededor del círculo, entonces se tiene que $\rho=v_0/R=1.012 rad/s$. 
+
+Como el robot diferencial tiene la restricción que solo se puede mover hacia el frente (o hacia atrás pero no hacia los lados). Se puede suponer que el robot se encentra perpendicular al radio de la trayectoria circular. Se sabe que el ancho del robot es $1.5m$, enotnces la trayectoria que describe la rueda derecha tiene un radio de $R_r=R-0.75=1.25m$, y la rueda izquierda de $R_l=R+0.75=2.75m$. Conociendo la velocidad angular y el radio de cada rueda, se determina la velocidad traslacional. $v_r=\rho R_r= 1.265m/s$, y $v_l=\rho R_l= 2.783m/s$. Tomando en centa que $r=0.01$. se obtiene que la velocidad de la ruda derecha debe ser $27.83rad/s$, y en la izquierda $12.65rad/s$. Estos valores son muy cercanos a los obtenidos en la simulación, entocnes los resultados simulados son los esperados para el sistema en cuestión. 
 
 
 
@@ -1351,7 +1355,20 @@ En esta simulación, a diferencia de la primera, la trayectoria se completa más d
 	\label{fig:evaluacion_de_la_restriccion_circulo}
 \end{figure}
 
+\subsubsection{Tercera simulación: trayectoria cuadrada con desaceleración en las esquinas}
 
+Para poder generar la primera trayectoria se utilizan escalones en la entrada. La velocidad de la trayectoria viene dada por (\ref{eq:entrada_cuadrado_suavizado}). De esta manera se logra describir una trayectoria cuadrada con rapidez constante (durante 20s). En la figura \ref{fig:entrada_trayectoria_cuadrada_suavizada} se muestra la entrada contra el tiempo. Luego de pocesar la entrada como se indica en la figura \ref{fig:simulacion_flow}, se obtienen los resultados en las figuras \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado_suavizado}, \ref{fig:velocidades_ruedas_trayectoria_cuadrada_suavizado}, \ref{fig:evaluacion_de_la_restriccion_cuadrado}, y \ref{fig:zoom_trayectoria_cuadrada_suavizada}. 
+
+\begin{equation}
+\mathbf{\dot{p_d}}(t)=\left[\begin{array}{c}(\mu(t-5)-\mu(t-10))(1-\cos(\pi (t-5)/5))-\mu(t-15)(1-\cos(\pi (t-15)/5))\\
+ (\mu(t)-\mu(t-5))(1-\cos(\pi t/5))-(\mu(t-10)+\mu(t-15))(1-\cos(\pi (t-10)/5)) \end{array}\right]
+\label{eq:entrada_cuadrado_suavizado}
+\end{equation}
+
+Esta simulación se realiza como un método alternativo para evitar las discotinuidades en las velocidades angulares de las ruedas. Se construye la entrada de manera que se describa una trayectoria cuadrada, pero que el robot desacelere cuando se acerca a las esquinas del cuadrado. Para evitar los cambios abruptos en las velocidades de los motores, se espera que en cada esquina la velocidad traslacional del robot sea nula. Como se desea constrir una trayectoria cuadrada, en periodos no se tiene traslacion en x, y en otors periodos no se tien traslacion en y. Estos cambios ocurren al llegal a las esquinas, enotnces la señal de entrada debe tener una derivada de 0 al llegar a una esquina. En síntesis se necesita una señal de entrada que sea contínua, pueda describir una trayecotria cuadrada, y su derivada sea también contínua. ESto se logra con la función en \ref{eq:entrada_cuadrado_suavizado}. Que la entrada pueda describir una trayectoria cuadrada, se logra con los escalones, para evitar desplazamiento en ambas dimensiones al mismo tiempo. Y la continuidad de la función y su derivada, se logra con la parte de los cosenos. De la figura \ref{eq:entrada_cuadrado_suavizado} es evidente que la función de entrada cumple con los requerimientos. 
+
+De las gráficas que se presentan en la figura \ref{fig:velocidades_ruedas_trayectoria_cuadrada_suavizado}, se nota que no tienen discotinuidades, por lo que con la entrada propuesta se logran tener velocidades en las ruedas cuya aceleración sea finita en todo punto. Además cabe destacar que ambas gráficas (\ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado_suavizado} y\ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado_suavizado}) presentan comportamientos sumamente parecidos. Esto significa que los comandos que envía el robot a sus motores son muy cercanos a los que se necesitan para poder describir la trayectoria cuadrada con su punto descentralizado. Este hecho se hace evidente al observar la figura \ref{fig:zoom_trayectoria_cuadrada_suavizada}. En esta se presenta una porción de la trayectoria, que muestra una esquina. Se debe notar que en este caso (a diferencia de la trayectoria cuadrada a rapidez constante), el robot sí puede describir el giro de $90^\circ$ que se requiere para tener un cuadrado.  Por otra parte, el comportamiento del centro del robot es asintótico al del punto descentralizado, cuando se tienen trayectorias rectas. 
+ 
 
 %******Posicion trayectoria cuadrada suavizada**************************************************************
 \begin{figure}
