Pequeño cambio nomenclatura

--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -10,6 +10,7 @@
 \usepackage{url}
 \usepackage{empheq}
 \usepackage{subcaption}
+\usepackage[justification=centering]{caption}
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage[spanish]{babel}
@@ -122,7 +123,9 @@ realizaron las simulaciones correspondientes para cada modelo, y postgeriormente
         \item[$p_0$] Posición del centro geométrico (punto entre las ruedas) [$m$]
         \item[$p_d$] Posición del punto descentralizado [$m$]
         \item[$p_g$] Posición del centro de masa [$m$]
+        \item[$B$] Factor de amortiguamiento viscoso torsional [$Ns$]
         \item[$2b$]  Ancho del robot [$m$]
+        \item[$s$] Distancia entre el centro de masa y el geométrico en el robot [$m$]
         \item[$p_r$] Posición de la rueda derecha [$m$]
         \item[$p_l$] Posición de la rueda izquierda [$m$]
         \item[$\varphi_r$] Posición angular de la rueda derecha [$rad$]
